@@ -557,4 +557,6 @@
 
 # -------------------------------------
 
+/(*UTF)(?=\x{123})/I
+
 # End of testinput10
