@@ -447,4 +447,6 @@
 
 # ---------------------------------------------------- 
 
+/(*UTF)(?=\x{123})/I
+
 # End of testinput12
